# scd30-mqtt

./: .env.example  .gitignore  CMakeLists.txt  README.md  env_loader.cpp  env_loader.h  install.sh  main.cpp  makeservice.sh
pahomqtt/.github/workflows/: artifact_linux.yml  artifact_macos.yml
